# cg-lecture-summer-2026

./: .gitignore  Cargo.toml  LICENSE  README.md  cspell.config.toml  cspell.txt  rustfmt.toml
.cargo/: config.toml
apps/attractor/: Cargo.toml
apps/attractor/src/: ball.rs  main.rs
apps/metaball/: Cargo.toml
apps/metaball/apps/exercise_a/: Cargo.toml
apps/metaball/apps/exercise_a/src/: main.rs
apps/metaball/apps/exercise_b/: Cargo.toml
apps/metaball/apps/exercise_b/src/: main.rs
apps/metaball/apps/exercise_c/: Cargo.toml
apps/metaball/apps/exercise_c/assets/: LICENSE  README.md
apps/metaball/apps/exercise_c/src/: main.rs
apps/metaball/apps/with_shader/: Cargo.toml
apps/metaball/apps/with_shader/src/: ball.rs  main.rs
apps/metaball/apps/with_shader/src/shaders/: metaball.wgsl
apps/metaball/src/: main.rs  metaball.rs
apps/ray_tracing/: Cargo.toml
apps/ray_tracing/src/: camera.rs  hit.rs  main.rs  material.rs  nannou_utils.rs  ray.rs  scene.rs  sphere.rs  utils.rs
apps/ray_tracing_gpu/: Cargo.toml
apps/ray_tracing_gpu/src/: camera.rs  main.rs  material.rs  scene.rs  sphere.rs
apps/ray_tracing_gpu/src/shaders/: ray_tracer.wgsl
apps/stable_fluids/: Cargo.toml
apps/stable_fluids/assets/: OFL.txt
apps/stable_fluids/src/: cmyk.rs  main.rs  nannou_utils.rs  solver.rs  ui.rs
apps/with_opencv/: README.md
apps/with_opencv/assets/images/: .gitignore
apps/with_opencv/src/: ball.rs  face_detector.rs  main.rs  nannou_utils.rs  opencv_utils.rs  optical_flow.rs
