#:schema https://www.schemastore.org/cargo.json

[workspace]
resolver = "3"
members = ["apps/*", "apps/metaball/apps/*"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
nannou = "0.20.0"
rayon = "1.12.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
opencv = "0.99.0"
ndarray = "0.17.2"
derive_more = "2.1.1"

[workspace.lints.clippy]
all = "warn"
